# QuickIM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test.json
.github/workflows/: codeql.yml
config/: config.json  dbconfig.json
utils/: MessageQueue.h  MessageType.h  client.cpp  client.h  dbhandler.cpp  dbhandler.h  encrypto.cpp  encrypto.h  server.cpp  server.h  type.h
